--- a/dogadopt/src/css/Home.css
+++ b/dogadopt/src/css/Home.css
@@ -1,1 +1,17 @@
 @import "tailwindcss/tailwind.css";
+
+.background-image {
+    background: linear-gradient(rgba(0, 0, 0, 0.30), rgba(0, 0, 0, 0.30)), url('../image/background.jpg');
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+}
+.container{
+   
+        max-width: 150%;
+        
+}
+.body{
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
